<resources>
    <string name="app_name">Practicing Themes</string>
    <string name="textViewText">Look at me!\nI am yellow!</string>
    <string name="buttonText">I'm a button</string>
    <string name="nameHint">Name</string>
    <string name="passwordHint">Password</string>
    <string name="newScreen">You did it!</string>
    <string name="greatjob">Great job! I am so proud of you!</string>
    <string name="logout">LOG OUT</string>
</resources>