<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColorRed"
    android:theme="@style/RedTheme"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="@dimen/textViewHeight"
        android:layout_marginStart="@dimen/margin"
        android:gravity="center_horizontal"
        android:text="@string/newScreen"
        android:textSize="@dimen/textSize"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="334dp"
        android:layout_marginTop="@dimen/margin"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/greatjob"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center_horizontal" />

    <View
        android:id="@+id/view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/ic_baseline_emoji_emotions_24" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginLeft="@dimen/margin"
        android:onClick="clickMe"/>
</LinearLayout>