<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/secondaryLightColor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="@dimen/textViewHeight"
        android:gravity="center_horizontal"
        android:text="@string/textViewText"
        android:textColor="@color/primaryDarkColor"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <Button
        android:id="@+id/button"
        android:layout_height="@dimen/buttonHeight"
        android:layout_width="@dimen/buttonWidth"
        android:layout_marginBottom="172dp"
        android:text="@string/buttonText"
        android:textSize="@dimen/buttonTextSize"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="clickMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/custom_buttons"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:background="@drawable/custom_box"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:background="@drawable/custom_box"/>


</androidx.constraintlayout.widget.ConstraintLayout>